# TaMP

./: .gitignore  CMakeLists.txt  DB_handler.cpp  DB_handler.h  Doxyfile  README.md  db_handler.cpp  db_handler.h  loginwindow.cpp  loginwindow.h  main.cpp  mainpage.dox  protocol.cpp  protocol.h  registerwindow.cpp  registerwindow.h  server.db  server_interface.cpp  server_interface.h  server_logic.cpp  server_logic.h  taskwindow.cpp  taskwindow.h  tcpclient.cpp  users_test.db
TaMP_Client/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  main.cpp  md5_util.h  registerwindow.cpp  registerwindow.h  resetpasswordwindow.cpp  resetpasswordwindow.h  taskwindow.cpp  taskwindow.h  tcpclient.cpp  tcpclient.h
TaMP_Server/: CMakeLists.txt  db_handler.cpp  db_handler.h  email.txt.example  main.cpp  protocol.cpp  protocol.h  server_interface.cpp  server_interface.h  server_logic.cpp  server_logic.h  smtpclient_mailru.cpp  smtpclient_mailru.h  taskwindow.cpp  taskwindow.h
TaMP_client/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  main.cpp  registerwindow.cpp  registerwindow.h  resetpasswordwindow.cpp  resetpasswordwindow.h  taskwindow.cpp  taskwindow.h  tcpclient.cpp
TaMP_server/: db_handler.cpp  db_handler.h  email.txt  main.cpp  protocol.cpp  protocol.h  server.db  server_interface.cpp  server_interface.h  server_logic.cpp  server_logic.h  smtpclient_mailru.cpp  smtpclient_mailru.h  sqlite3.def  taskwindow.cpp  taskwindow.h
docker/: Dockerfile  fix-dns.sh
docs/html/: _ta_m_p___client_2main_8cpp.html  _ta_m_p___client_2main_8cpp.js  _ta_m_p___client_2main_8cpp_source.html  _ta_m_p___server_2main_8cpp.html  _ta_m_p___server_2main_8cpp.js  _ta_m_p___server_2main_8cpp_source.html  annotated.html  annotated_dup.js  class_db_handler-members.html  class_db_handler.html  class_db_handler.js  class_login_window-members.html  class_login_window.html  class_login_window.js  class_register_window-members.html  class_register_window.html  class_register_window.js  class_reset_password_window-members.html  class_reset_password_window.html  class_reset_password_window.js  class_server_interface-members.html  class_server_interface.html  class_server_interface.js  class_server_logic-members.html  class_server_logic.html  class_server_logic.js  class_smtp_client-members.html  class_smtp_client.html  class_smtp_client.js  class_task_window-members.html  class_task_window.html  class_task_window.js  class_tcp_client-members.html  class_tcp_client.html  class_tcp_client.js  classes.html  db__handler_8cpp.html  db__handler_8cpp_source.html  db__handler_8h.html  db__handler_8h.js  (+70 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_1a.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  (+43 more)
